Fix contianed elements left alignment

--- a/assets/scss/mixins.scss
+++ b/assets/scss/mixins.scss
@@ -11,7 +11,7 @@
   max-width: $large;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
+  padding-left: 2rem; // 1rem for the grid padding + 1 rem for the column padding
   padding-right: 1rem;
 }
 
